three section added

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,70 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
+.flexible-container{
+    display: flex;
+}
+h1{
+    font-size: 50px;
+}
+h2{
+    font-size: 40px;
+}
+h3 {
+    font-size: 30px;
+}
+.half-width{
+    width: 50%;
+    padding: 3%;
+}
+.color-orange{
+    color: orange;
+}
+.side-img{
+    width: 80%;
+} 
+.half-width p{
+    padding: 20px 0;
+    text-align: justify;
+}
+.button-shape{
+    text-decoration: none;
+    background-image: linear-gradient(orange, tomato);
+    padding: 10px 40px;
+    color: white;
+    font-weight: 700;
+    border-radius: 50px;
+}
+.about-me{
+    background-image: url(../images/7.png);
+    background-repeat: no-repeat;
+}
+
+#person-img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
+}
+
+#recipies {
+    text-align: center;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.food-item{
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 30px gray;
+}
+
+.food-item img{
+    width: 100%;
+}
+section{
+    margin-bottom: 50px;
+}
