--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ h3 {
 .about-me{
     background-image: url(../images/7.png);
     background-repeat: no-repeat;
+    background-size: ;
 }
 
 #person-img{
@@ -66,11 +67,29 @@ h3 {
 .food-item img{
     width: 100%;
 }
+#reservation{
+    background-image: linear-gradient(white, rgb(181, 231, 231));
+}
 
-.ask-any{
+#reservasion-dec{
     text-align: center;
 }
 
+#contact-us{
+    background-image: url(../images/57.jpg);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+#contact-us h2{
+    text-align: center;
+}
 section{
     margin-bottom: 50px;
+}
+footer{
+    text-align: center;
+    background-color: black;
+    color: white;
+    padding: 10px;
+    padding-bottom: 100px;
 }
